# ChangeLog for media-plugins/triceratops-lv2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nob 2012; Dominique Michel <dominique_libre@sourceforge.net>
  triceratops-lv2-0.1.1d.ebuild: Valid license, install the README, add ~x86 KEYWORD.

  17 Nov 2012; Matt Henley <nwmatt@gmail.com>
  +triceratops-lv2-0.1.1d.ebuild: Initial ebuild for Triceratops LV2 synth.