@@ -1,4 +1,6 @@
 DIST triceratops-lv2-v0.1.1d.tar.gz 292487 SHA256 b9bf6c4eb92e876f5e2cbe38b18f22ea7efff4ea5f56f623016122d5855459cc SHA512 79ba0680b2f4e43369fa574ebdaa87b2c4b747f78e4791906e9465bfa4cf67016096c3c13a922d5e80613e2eb72cb08120e9481934eb724a23389937f8af6e28 WHIRLPOOL dc96b0988f22d866a3d3f81692f346f764c36b9e62c4beddcf1fccbb789ccb45d6af692d3683b19d4c6f0a2ad06e48fc60dedddad0b83fdb561fc0a6b0e6cfce
+DIST triceratops-lv2-v0.1.7.tar.gz 320488 SHA256 2ecf35756c97026414a9188d5c831e0639409a91123f9b190d30c137fcea4791 SHA512 3f47e18e5c71932d64cc77886f6f8fcd71c735d73296c5e53ae9c9c07f0194a57c92106fca8f1da557ab74c9e3cc5c1c26acfe05b10428ed0f9ef884aa70dfcd WHIRLPOOL 43eba5dfc6388b0a136e3459175ff6d7c930ceee7b0db4b6ccdb22e77ed8d8ff14a492e823ba2744e188daaeeef70414aff18b0945f306e077da66348de5b3be
 EBUILD triceratops-lv2-0.1.1d.ebuild 704 SHA256 4d7f1700f6341b37d7101e61ff98d03630299e4639d158b6e491369c2458742c SHA512 6e235f25bcadf57a733730f3bbd2e66c9af1dc26925df391e9e36d453c9ccdbbc368c3e60b39467134ffcdd907c99e19d327071cd32651859fb33601594202fa WHIRLPOOL a5c21e7d96f3ade27762ce3b44ed03e821bbfd3cbfeafd2e6d76ec52643f934bdee308a49d8943dbcbd39a559652e0c63235fe170b5c81ece90cc06f958a4c65
-MISC ChangeLog 405 SHA256 ec0c6e3d2035c82a3af385ebaf50d9330473fdef935cc3e853d5f50533774cc1 SHA512 127b05f31e38618cbfdf930d29fb2074b27f1f05abc2c3f4619bf4c95d7618589081982fc6779f366e256703d5bdb2b1cab0d6e0ea01fdb1a6db574fcee70141 WHIRLPOOL 2c5dc34aa4fd3c56c3bbc3718b7c7c5c5ed764b8d6d37abb79ab27481d145ee65f11a215b53539b0c8399a1dc0cdcba8653b841585c725e344f17181bf0d2495
+EBUILD triceratops-lv2-0.1.7.ebuild 704 SHA256 4d7f1700f6341b37d7101e61ff98d03630299e4639d158b6e491369c2458742c SHA512 6e235f25bcadf57a733730f3bbd2e66c9af1dc26925df391e9e36d453c9ccdbbc368c3e60b39467134ffcdd907c99e19d327071cd32651859fb33601594202fa WHIRLPOOL a5c21e7d96f3ade27762ce3b44ed03e821bbfd3cbfeafd2e6d76ec52643f934bdee308a49d8943dbcbd39a559652e0c63235fe170b5c81ece90cc06f958a4c65
+MISC ChangeLog 507 SHA256 4d60886cd8a88d3618d47442768b1a4fb0f351e438e8fad88d3165e5f3d88474 SHA512 991cb429e24e8e7d0943c25f64ebf3ce041126ef7f696ce2d5a9573c1f07f898dd4541618fb8140eae8c68e26179abf887d53ecf4d1ceca095799913353bdcfc WHIRLPOOL 6d36426496df2df12e75191fe9b71579b794b4eb325df61dc47d8e94afef44f33bfdec3bc0f502faecdcad9f82ed40b88f75629930db4ee235ac3ca60147c3a0
 MISC metadata.xml 268 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89 SHA512 3d709a016692f887d642d19b2644c10a09f666133f1f035b8a4c10e5772fbb39fa84a856a496d392594ccf850739fbf46ffa78ecc74214e8342ee97676b375e9 WHIRLPOOL 17c886c5b97925bd9223c0210170a63e55a2c2a238ae81ebf8efa14109d790406f45d0773d63bea825c1e40b058bd9e20a5d9c264da4db7c8fd2e556ecd83b2a
