@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Feb 2014; Matt Henley <nwmatt@gmail.com>
+  +triceratops-lv2-0.7.ebuild: Update for new version.
+
   18 Nob 2012; Dominique Michel <dominique_libre@sourceforge.net>
   triceratops-lv2-0.1.1d.ebuild: Valid license, install the README, add ~x86 KEYWORD.
 
